Finish chapter 3-add i18n

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,30 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  static_pages:
+    home:
+      home: "Home"
+      sample: "Sample App"
+      ruby: "Ruby on Rails Tutorial"
+      up: "This is the home page for the %{ruby_link} sample application."
+    about:
+      about: "About"
+      ruby: "Ruby on Rails Tutorial"
+      book: "book"
+      ss: "screencast series"
+      rubyonrails: "Ruby on Rails"
+      up: "The %{ruby_link} is a %{book_link} and %{ss_link} to teach web development with 
+        %{rubyonrails_link} This is the sample application for the tutorial."
+    contact:
+      contact: "Contact"
+      contactpage: "contact page"
+    help:
+      help: "Help"
+      ruby: "Ruby on Rails Tutorial"
+      rails: "Rails Tutorial help section"
+      up: "Get help on the Ruby on Rails Tutorial at the %{ruby_link} 
+        To get help on this sample app, see the %{rails_link} book."
+  layouts:
+    application:
+      rubyrails: "Ruby on Rails Tutorial Sample App"
+
