chapter 7: Finish user signup

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,9 +31,11 @@
 
 en:
   name: "sample app"
+  rails_logo: "Rails logo"
+  err: "The form contains %{errors_count}."
+  messenger: "Sorry, no data found"
   static_pages:
     home:
-      home: "Home"
       sample: "Welcome to the Sample App"
       sign_up: "Sign up now!"
       up: "This is the home page for the 
@@ -58,10 +60,10 @@ en:
   layouts:
     application:
       rubyrails: "Ruby on Rails Tutorial Sample App"
-    _footer:
-      up: "The <a href='http://www.railstutorial.org/''>
-        Ruby on Rails Tutorial</a> by <a href='#'>PBD</a>"
-    _header:
+    footer:
+      up: "The <a href='http://www.railstutorial.org/'>
+        Ruby on Rails Tutorial</a> by <a href='#'>Pham Ba Dat</a>"
+    header:
       login: "Login"
   helpers:
     application_helper:
@@ -70,3 +72,11 @@ en:
     new:
       sign_up: "Sign up"
       up: "This will be a signup page for new users."
+      btntext: "Create my account"
+  activerecord:
+    attributes:
+      user:
+        name: "Name"
+        email: "Email"
+        password: "Password"
+        password_confirmation: "Password Confirmation"
