--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -81,7 +81,7 @@ en:
       login_fail: "Invalid email/password combination"
       you_sure: "Are you sure?"
       account_no_active: "Account not activated.
-        Please check your email for the activation link. "
+        Please check your email for the activation link."
   helpers:
     application_helper:
       rubyrails: "Ruby on Rails Tutorial Sample App"
@@ -108,6 +108,7 @@ en:
       remember_me: "Remember Me"
       remember: "Remember me on this computer"
       new_user: "New user? "
+      forgot_password: " (Forgot Password)"
   controllers:
     concerns:
       welcome: "Welcome to the Sample App"
@@ -118,8 +119,25 @@ en:
       check_email: "Please check your email to activate your account."
       account_activated: "Account activated!"
       invalid_link: "Invalid activation link"
-  mailer:
-    account_activation: "Account activation"
+      sent_password: "Email sent with password reset instructions"
+      email_not_found: "Email address not found"
+      pass_reset: "Password has been reset."
+      pass_reset_expired: "Password reset has expired."
+      email_not_found: "Email address not found"
+      empty: "can't be empty"
+  mailers:
+    user:
+      account_activation: "Account activation"
+      pass_reset: "Password reset"
+    password_resets:
+      reset_password: "Reset Password"
+      updated_pass: "Update Password"
+      forgot_pass: "Forgot Password"
+      submit: "Submit"
+      click_link: "To reset your password click the link below:"
+      link_expire: "This link will expire in two hours."
+      ignore_password: "If you did not request your password to be reset,
+        please ignore this email and your password will stay as it is."
 
   activerecord:
     attributes:
