--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,6 +36,7 @@ en:
   hi: "Hi %{name},"
   welcome: "Welcome to the Sample App! Click on the link below to activate your account:"
   activate: "Activate"
+  view_profile: "view my profile"
   
   static_pages:
     home:
@@ -44,6 +45,7 @@ en:
       sign_up: "Sign up now!"
       up: "This is the home page for the 
         <a href='http://www.railstutorial.org/'>Ruby on Rails Tutorial</a> sample application."
+      micropost_feed: "Micropost Feed"
     about:
       about: "About"
       up: "The <a href='http://www.railstutorial.org/'>Ruby on Rails Tutorial</a> 
@@ -77,7 +79,7 @@ en:
       log_in: "Log in"
       account: "Account"
     messenger:
-      no_data: "Sorry, no data found"
+      no_data: "Sorry, the data can not be found"
       login_fail: "Invalid email/password combination"
       you_sure: "Are you sure?"
       account_no_active: "Account not activated.
@@ -125,6 +127,9 @@ en:
       pass_reset_expired: "Password reset has expired."
       email_not_found: "Email address not found"
       empty: "can't be empty"
+      micropost_created: "Micropost created!"
+      micropost_delete: "Micropost deleted"
+      cant_delete: "Micropost can't be deleted"
   mailers:
     user:
       account_activation: "Account activation"
@@ -138,6 +143,17 @@ en:
       link_expire: "This link will expire in two hours."
       ignore_password: "If you did not request your password to be reset,
         please ignore this email and your password will stay as it is."
+  micropost:
+    picture: 
+      max_size: "should be less than 5MB"
+      accept: "image/jpeg,image/gif,image/png"
+    new_compose: "Compose new micropost..."
+    post: "Post"
+    one: "%{count} micropost"
+    other: "%{count} microposts"
+    with_posts: "Microposts (%{count})"
+    posted: "Posted %{date} ago."
+    delete: "Delete"
 
   activerecord:
     attributes:
